# Wraith

./: .gitignore  README.md
docs/: motto.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  phase8.md  plan.md  progress.md  roadmap.md
proto/: wraith.proto
wraith-control/: requirements.txt  setup.py
wraith-control/examples/: migrate_job.py
wraith-control/tests/: test_checks.py  test_teleporter.py
wraith-control/wraith/: __init__.py  checks.py  cli.py  config.py  exceptions.py  logging.py  remote.py  teleporter.py
wraith-go/: Makefile  go.mod
wraith-go/cmd/receiver/: main.go
wraith-go/cmd/transmitter/: main.go
wraith-go/pkg/delta/: delta.go
wraith-go/pkg/transport/: client.go  protocol.go  server.go
wraith-go/tests/: integration_test.go
wraith-rust/: Cargo.toml  build.rs
wraith-rust/src/: aslr.rs  capturer.rs  error.rs  fd_enum.rs  fd_restore.rs  lib.rs  main.rs  memory.rs  proto.rs  ptrace_ops.rs  registers.rs  restorer.rs  snapshot.rs  utils.rs
wraith-rust/tests/: integration_tests.rs
