[package]
name = "wraith-capturer"
version = "0.1.0"
edition = "2021"
description = "Wraith — process state capture and restore engine (Rust core)"

# Both a library (for tests) and a binary (for CLI).
# The library exposes all modules; the binary is a thin CLI wrapper.

[dependencies]
nix        = { version = "0.27", features = ["ptrace", "process", "signal"] }
libc       = "0.2"
anyhow     = "1.0"
serde      = { version = "1.0", features = ["derive"] }
prost      = "0.12"   # Protobuf encoding/decoding (replaces bincode for snapshots)
crc        = "3.0"    # CRC-64 checksums for memory region integrity
clap       = { version = "4.4", features = ["derive"] }
log        = "0.4"
env_logger = "0.10"

[build-dependencies]
prost-build = "0.12"  # Compiles proto/wraith.proto → src at build time

[dev-dependencies]
tempfile = "3.8"
